--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
+#how to use this file
+
+#open terminal
+#install python3 (in my case - brew install python3 - MacOS)
+#navigate to code (cd path/to/download/WBSChallenge - example only!!)
+#create environment or else run the following on base environment:
+#pip install -r requirements.txt
+
 selenium==3.5.0
 splinter==0.7.6
